--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
+    "cloudinary-vue": "^1.2.3",
     "core-js": "^3.6.5",
     "twilio": "^3.72.0",
     "vue": "^2.6.11",
@@ -33,6 +34,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.45.0",
     "sass-loader": "^10.2.0",
+    "vue-cli-plugin-cloudinary": "~0.0.5",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
