--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "cloudinary-vue": "^1.2.3",
     "core-js": "^3.6.5",
+    "dotenv": "^14.2.0",
     "twilio": "^3.72.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
