--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary-vue": "^1.2.3",
     "core-js": "^3.6.5",
     "dotenv": "^14.2.0",
+    "lodash": "^4.17.21",
     "twilio": "^3.72.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
