--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^14.2.0",
     "lodash": "^4.17.21",
     "twilio": "^3.72.0",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
     "vue-router": "^3.2.0",
